test_suite/alan-2022-examples/failing/001460_mutation.alan
source M begin call rm0p(1, call o()) end
